--- a/bike/Readme
+++ b/bike/Readme
@@ -4,4 +4,4 @@ this is a simple analysis bike project which answer some questions after cleanin
 3-second question is there a relationship between the custome who buy a bike and the distance between his work and home
 4-third question who is the most age that target the bike
 
-using analysis to extract information fom this dataset and visualize the result at smart 
+using analysis to extract information fom this dataset and visualize the result at smart way
